comfyui_cf_template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: A CloudFormation template to deploy the ComfyUI for Stable Diffusion XL

Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: sd-webui-sg
      GroupDescription: Security group for ComfyUI EC2 instance
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8188
          ToPort: 8188
          CidrIp: 0.0.0.0/0
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: g4dn.xlarge
      ImageId: ami-0ab18609bf628799c
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 300
            VolumeType: gp2
      "Tags": [{ "Key": "Name", "Value": "comfyui-web-ui-cf" }]
      SecurityGroups:
        - Ref: SecurityGroup
      UserData:
        "Fn::Base64": |
          #!/bin/bash
          cd /home/ubuntu
          git clone https://github.com/Detailing-the-Realm/comfyui-aws.git

          bash comfyui-aws/aws_comfyui_setup.sh -y
          cd /home/ubuntu
          cp  comfyui-aws/aws_webui.sh ComfyUI/

          # change ownership of the ComfyUI so that a regular user can start the server
          sudo chown -R ubuntu:ubuntu ComfyUI/
          sudo chmod 755 ComfyUI/aws_webui.sh

          # start the server as user 'ubuntu'
          sudo -u ubuntu nohup bash /home/ubuntu/ComfyUI/aws_webui.sh > log.txt
  MyEIP:
    Type: AWS::EC2::EIP
  MyEIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt MyEIP.AllocationId
      InstanceId: !Ref EC2Instance
